--- a/myhockeyapp/views/game_list.pug
+++ b/myhockeyapp/views/game_list.pug
@@ -105,7 +105,7 @@ block content
                                         | Home
                                         | 
                                         span.caret
-                                    ul.dropdown-menu(aria-labelledby="typeOptions")
+                                    ul.dropdown-menu(aria-labelledby="homeawayOptions")
                                         li
                                             a()
                                                 | Home
