--- a/myhockeyapp/views/layout.pug
+++ b/myhockeyapp/views/layout.pug
@@ -238,6 +238,16 @@ html(lang="en")
                 a(href="/gameentry") 
                   i.fa.fa-fw.fa-list-ul 
                   | Games                
+              li
+                a(href="") 
+                  i.fa.fa-fw
+                  | Transactions       
+                ul.nav.nav-second-level
+                  li
+                    a(href="/transactions/incomeforecasts")
+                      i.fa.fa-fw
+                      | Income Forecasts
+                           
       div#page-wrapper
         block content
 
