--- a/myhockeyapp/views/layout.pug
+++ b/myhockeyapp/views/layout.pug
@@ -247,7 +247,10 @@ html(lang="en")
                     a(href="/transactions/incomeforecasts")
                       i.fa.fa-fw
                       | Income Forecasts
-                           
+                  li
+                    a(href="/transactions/expenseforecasts")
+                      i.fa.fa-fw
+                      | Expense Forecasts                           
       div#page-wrapper
         block content
 
