--- a/myhockeyapp/views/layout.pug
+++ b/myhockeyapp/views/layout.pug
@@ -244,6 +244,10 @@ html(lang="en")
                   | Transactions       
                 ul.nav.nav-second-level
                   li
+                    a(href="/transactions/cashflow")
+                      i.fa.fa-fw
+                      | Cashflow Forecasts
+                  li
                     a(href="/transactions/incomeforecasts")
                       i.fa.fa-fw
                       | Income Forecasts
