minor ui changes

--- a/myhockeyapp/views/cashflow_forecast.pug
+++ b/myhockeyapp/views/cashflow_forecast.pug
@@ -93,7 +93,7 @@ block scripts
             $('.table.table-bordered').DataTable({
                 "responsive": true,
                 "bPaginate": false,
-                "bJQueryUI": true,
+                "bJQueryUI": false,
                 "bLengthChange": false,
                 "bFilter": false,
                 "bSort": false,
@@ -101,7 +101,7 @@ block scripts
                 "bAutoWidth": false,
                 "bProcessing": true,
                 "iDisplayLength": 10,
-                "scrollX": true,
+                "scrollX": false,
                 "columnDefs": [
                     {
                         "className": "dt-body-right",
