changed autowidth to false

--- a/myhockeyapp/views/cashflow_forecast.pug
+++ b/myhockeyapp/views/cashflow_forecast.pug
@@ -98,7 +98,7 @@ block scripts
                 "bFilter": false,
                 "bSort": false,
                 "bInfo": false,
-                "bAutoWidth": false,
+                "bAutoWidth": true,
                 "bProcessing": true,
                 "iDisplayLength": 10,
                 "scrollX": false,
